feature - setup movieService
- prepare movieService
- create Card component
- create Slider

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -2,6 +2,7 @@
 @import './variables.css';
 @import 'primeflex/primeflex.css';
 @import 'primeicons/primeicons.css';
+@import 'swiper/css';
 
 * {
   box-sizing: border-box;
