--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,17 +1,11 @@
 @import './fonts.css';
 @import './variables.css';
-@import 'primeflex/primeflex.css';
-@import 'primeicons/primeicons.css';
 @import 'swiper/css';
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
+@import 'tailwindcss';
 
 body {
   font-family: var(--font-primary);
+  background-color: #0b0f1b;
 }
 
 a {
